finished up core command set

--- a/res/games-only-locked.html
+++ b/res/games-only-locked.html
@@ -230,9 +230,9 @@
               <li class="icon-logout">
                 <a
                   href="./ucp.php?mode=logout&amp;sid=99542c42b95238f3f6e131a2a369febe"
-                  title="Logout [ moonbird ]"
+                  title="Logout [ joybot ]"
                   accesskey="x"
-                  >Logout [ moonbird ]</a
+                  >Logout [ joybot ]</a
                 >
               </li>
             </ul>
@@ -2477,8 +2477,8 @@
         <h3><a href="./viewonline.php">Who is online</a></h3>
         <p>
           Users browsing this forum:
-          <a href="./memberlist.php?mode=viewprofile&amp;un=moonbird"
-            >moonbird</a
+          <a href="./memberlist.php?mode=viewprofile&amp;un=joybot"
+            >joybot</a
           >
           and 0 guests
         </p>
