--- a/res/games-two-active.html
+++ b/res/games-two-active.html
@@ -146,7 +146,7 @@
                         <li class="icon-members"><a href="./memberlist.php"
                                 title="View complete list of members">Members</a></li>
                         <li class="icon-logout"><a href="./ucp.php?mode=logout&amp;sid=99542c42b95238f3f6e131a2a369febe"
-                                title="Logout [ moonbird ]" accesskey="x">Logout [ moonbird ]</a></li>
+                                title="Logout [ joybot ]" accesskey="x">Logout [ joybot ]</a></li>
 
                     </ul>
 
@@ -1365,7 +1365,7 @@
 
 
             <h3><a href="./viewonline.php">Who is online</a></h3>
-            <p>Users browsing this forum: <a href="./memberlist.php?mode=viewprofile&amp;un=moonbird">moonbird</a> and
+            <p>Users browsing this forum: <a href="./memberlist.php?mode=viewprofile&amp;un=joybot">joybot</a> and
                 13 guests</p>
             <div id="page-footer">
 
