--- a/res/games-full-page.html
+++ b/res/games-full-page.html
@@ -221,9 +221,9 @@
             <li class="icon-logout">
               <a
                 href="./ucp.php?mode=logout&amp;sid=99542c42b95238f3f6e131a2a369febe"
-                title="Logout [ moonbird ]"
+                title="Logout [ joyboy ]"
                 accesskey="x"
-                >Logout [ moonbird ]</a
+                >Logout [ joyboy ]</a
               >
             </li>
           </ul>
@@ -2505,7 +2505,7 @@
       <h3><a href="./viewonline.php">Who is online</a></h3>
       <p>
         Users browsing this forum:
-        <a href="./memberlist.php?mode=viewprofile&amp;un=moonbird">moonbird</a>
+        <a href="./memberlist.php?mode=viewprofile&amp;un=joyboy">joyboy</a>
         and 13 guests
       </p>
       <div id="page-footer">
