--- a/res/vfm-mock/page-1.html
+++ b/res/vfm-mock/page-1.html
@@ -239,7 +239,6 @@
                   height="9"
                   alt="Post"
                   title="Post" /></a
-
               >by
               <strong
                 ><a
@@ -691,7 +690,7 @@
                 <li>AbstractGlacial - Bulletproof</li>
                 <li>Flake - Universal Backup</li>
               </ol>
-              !joybot --print --create-playerlist --add-host ryanbby
+              !joybot --print true --create-playerlist --add-host ryanbby
               --change-weight swordsword 3
             </div>
           </div>
@@ -704,7 +703,6 @@
                   width="198"
                   height="253"
                   alt="User avatar" /></a
-
               ><br />
               <a
                 href="./memberlist.php?mode=viewprofile&amp;un=ryanyb"
@@ -787,7 +785,6 @@
                   height="9"
                   alt="Post"
                   title="Post" /></a
-
               >by
               <strong
                 ><a
@@ -949,7 +946,6 @@
                   width="198"
                   height="253"
                   alt="User avatar" /></a
-
               ><br />
               <a
                 href="./memberlist.php?mode=viewprofile&amp;un=ryanyb"
@@ -1032,7 +1028,6 @@
                   height="9"
                   alt="Post"
                   title="Post" /></a
-
               >by
               <strong
                 ><a
@@ -1108,7 +1103,6 @@
                   width="198"
                   height="253"
                   alt="User avatar" /></a
-
               ><br />
               <a
                 href="./memberlist.php?mode=viewprofile&amp;un=ryanyb"
@@ -1191,7 +1185,6 @@
                   height="9"
                   alt="Post"
                   title="Post" /></a
-
               >by
               <strong
                 ><a
@@ -1237,7 +1230,6 @@
                   width="198"
                   height="253"
                   alt="User avatar" /></a
-
               ><br />
               <a
                 href="./memberlist.php?mode=viewprofile&amp;un=ryanyb"
@@ -1320,7 +1312,6 @@
                   height="9"
                   alt="Post"
                   title="Post" /></a
-
               >by
               <strong
                 ><a
@@ -1344,7 +1335,6 @@
                   width="256"
                   height="256"
                   alt="User avatar" /></a
-
               ><br />
               <a
                 href="./memberlist.php?mode=viewprofile&amp;un=Chemist1422"
@@ -1423,7 +1413,6 @@
                   height="9"
                   alt="Post"
                   title="Post" /></a
-
               >by
               <strong
                 ><a
@@ -1445,7 +1434,6 @@
                   width="184"
                   height="156"
                   alt="User avatar" /></a
-
               ><br />
               <a href="./memberlist.php?mode=viewprofile&amp;un=MetrionIsANerd"
                 >MetrionIsANerd</a
@@ -1520,7 +1508,6 @@
                   height="9"
                   alt="Post"
                   title="Post" /></a
-
               >by
               <strong
                 ><a
@@ -1542,7 +1529,6 @@
                   width="256"
                   height="146"
                   alt="User avatar" /></a
-
               ><br />
               <a href="./memberlist.php?mode=viewprofile&amp;un=SparkingJayYT"
                 >SparkingJayYT</a
@@ -1618,7 +1604,6 @@
                   height="9"
                   alt="Post"
                   title="Post" /></a
-
               >by
               <strong
                 ><a
@@ -1645,7 +1630,6 @@
                   width="256"
                   height="237"
                   alt="User avatar" /></a
-
               ><br />
               <a
                 href="./memberlist.php?mode=viewprofile&amp;un=Varanus"
@@ -1724,7 +1708,6 @@
                   height="9"
                   alt="Post"
                   title="Post" /></a
-
               >by
               <strong
                 ><a
@@ -1751,7 +1734,6 @@
                   width="256"
                   height="237"
                   alt="User avatar" /></a
-
               ><br />
               <a
                 href="./memberlist.php?mode=viewprofile&amp;un=Varanus"
@@ -1830,7 +1812,6 @@
                   height="9"
                   alt="Post"
                   title="Post" /></a
-
               >by
               <strong
                 ><a
@@ -1854,7 +1835,6 @@
                   width="184"
                   height="156"
                   alt="User avatar" /></a
-
               ><br />
               <a href="./memberlist.php?mode=viewprofile&amp;un=MetrionIsANerd"
                 >MetrionIsANerd</a
@@ -1929,7 +1909,6 @@
                   height="9"
                   alt="Post"
                   title="Post" /></a
-
               >by
               <strong
                 ><a
@@ -1961,7 +1940,6 @@
                   width="256"
                   height="237"
                   alt="User avatar" /></a
-
               ><br />
               <a
                 href="./memberlist.php?mode=viewprofile&amp;un=Varanus"
@@ -2040,7 +2018,6 @@
                   height="9"
                   alt="Post"
                   title="Post" /></a
-
               >by
               <strong
                 ><a
@@ -2064,7 +2041,6 @@
                   width="184"
                   height="156"
                   alt="User avatar" /></a
-
               ><br />
               <a href="./memberlist.php?mode=viewprofile&amp;un=MetrionIsANerd"
                 >MetrionIsANerd</a
@@ -2139,7 +2115,6 @@
                   height="9"
                   alt="Post"
                   title="Post" /></a
-
               >by
               <strong
                 ><a
@@ -2165,7 +2140,6 @@
                   width="256"
                   height="237"
                   alt="User avatar" /></a
-
               ><br />
               <a
                 href="./memberlist.php?mode=viewprofile&amp;un=Varanus"
@@ -2244,7 +2218,6 @@
                   height="9"
                   alt="Post"
                   title="Post" /></a
-
               >by
               <strong
                 ><a
@@ -2266,7 +2239,6 @@
                   width="184"
                   height="156"
                   alt="User avatar" /></a
-
               ><br />
               <a href="./memberlist.php?mode=viewprofile&amp;un=MetrionIsANerd"
                 >MetrionIsANerd</a
@@ -2341,7 +2313,6 @@
                   height="9"
                   alt="Post"
                   title="Post" /></a
-
               >by
               <strong
                 ><a href="./memberlist.php?mode=viewprofile&amp;un=Flake"
@@ -2362,7 +2333,6 @@
                   width="256"
                   height="256"
                   alt="User avatar" /></a
-
               ><br />
               <a href="./memberlist.php?mode=viewprofile&amp;un=Flake">Flake</a>
             </dt>
@@ -2436,7 +2406,6 @@
                   height="9"
                   alt="Post"
                   title="Post" /></a
-
               >by
               <strong
                 ><a href="./memberlist.php?mode=viewprofile&amp;un=Flake"
@@ -2459,7 +2428,6 @@
                   width="256"
                   height="256"
                   alt="User avatar" /></a
-
               ><br />
               <a href="./memberlist.php?mode=viewprofile&amp;un=Flake">Flake</a>
             </dt>
@@ -2533,7 +2501,6 @@
                   height="9"
                   alt="Post"
                   title="Post" /></a
-
               >by
               <strong
                 ><a
@@ -2562,7 +2529,6 @@
                   width="256"
                   height="256"
                   alt="User avatar" /></a
-
               ><br />
               <a
                 href="./memberlist.php?mode=viewprofile&amp;un=Chemist1422"
@@ -2641,7 +2607,6 @@
                   height="9"
                   alt="Post"
                   title="Post" /></a
-
               >by
               <strong
                 ><a
@@ -2675,7 +2640,6 @@
                   width="256"
                   height="237"
                   alt="User avatar" /></a
-
               ><br />
               <a
                 href="./memberlist.php?mode=viewprofile&amp;un=Varanus"
@@ -2754,7 +2718,6 @@
                   height="9"
                   alt="Post"
                   title="Post" /></a
-
               >by
               <strong
                 ><a
@@ -2788,7 +2751,6 @@
                   width="184"
                   height="156"
                   alt="User avatar" /></a
-
               ><br />
               <a href="./memberlist.php?mode=viewprofile&amp;un=MetrionIsANerd"
                 >MetrionIsANerd</a
@@ -2863,7 +2825,6 @@
                   height="9"
                   alt="Post"
                   title="Post" /></a
-
               >by
               <strong
                 ><a
@@ -2903,7 +2864,6 @@
                   width="256"
                   height="256"
                   alt="User avatar" /></a
-
               ><br />
               <a
                 href="./memberlist.php?mode=viewprofile&amp;un=Chemist1422"
@@ -2982,7 +2942,6 @@
                   height="9"
                   alt="Post"
                   title="Post" /></a
-
               >by
               <strong
                 ><a
@@ -3024,7 +2983,6 @@
                   width="256"
                   height="256"
                   alt="User avatar" /></a
-
               ><br />
               <a
                 href="./memberlist.php?mode=viewprofile&amp;un=Chemist1422"
@@ -3103,7 +3061,6 @@
                   height="9"
                   alt="Post"
                   title="Post" /></a
-
               >by
               <strong
                 ><a
@@ -3125,7 +3082,6 @@
                   width="184"
                   height="156"
                   alt="User avatar" /></a
-
               ><br />
               <a href="./memberlist.php?mode=viewprofile&amp;un=MetrionIsANerd"
                 >MetrionIsANerd</a
@@ -3200,7 +3156,6 @@
                   height="9"
                   alt="Post"
                   title="Post" /></a
-
               >by
               <strong
                 ><a
@@ -3224,7 +3179,6 @@
                   width="256"
                   height="256"
                   alt="User avatar" /></a
-
               ><br />
               <a
                 href="./memberlist.php?mode=viewprofile&amp;un=Chemist1422"
@@ -3303,7 +3257,6 @@
                   height="9"
                   alt="Post"
                   title="Post" /></a
-
               >by
               <strong
                 ><a href="./memberlist.php?mode=viewprofile&amp;un=Eragon1329"
@@ -3334,7 +3287,6 @@
                   width="256"
                   height="256"
                   alt="User avatar" /></a
-
               ><br />
               <a href="./memberlist.php?mode=viewprofile&amp;un=Eragon1329"
                 >Eragon1329</a
@@ -3410,7 +3362,6 @@
                   height="9"
                   alt="Post"
                   title="Post" /></a
-
               >by
               <strong
                 ><a
@@ -3457,7 +3408,6 @@
                   width="256"
                   height="237"
                   alt="User avatar" /></a
-
               ><br />
               <a
                 href="./memberlist.php?mode=viewprofile&amp;un=Varanus"
