starting to scafold out role system typings

--- a/res/vfm-mock/page-3.html
+++ b/res/vfm-mock/page-3.html
@@ -1143,7 +1143,7 @@
       </div>
 
       <hr class="divider" />
-
+<input type="hidden" name="topic_cur_post_id" value="3436440" />
       <div id="p3436440" class="post bg1">
         <div class="inner">
           <span class="corners-top"><span></span></span>
